--- a/src/components/Expenses.css
+++ b/src/components/Expenses.css
@@ -1,4 +1,4 @@
-.expense-date {
+/* .expense-date {
     display: flex;
     flex-direction: column;
     width: 5.5rem;
@@ -23,4 +23,14 @@
   .expense-date__day {
     font-size: 1.5rem;
     font-weight: bold;
+  } */
+
+  .expenses {
+    padding: 1rem;
+    background-color: rgb(31, 31, 31);
+    margin: 2rem auto;
+    width: 50rem;
+    max-width: 95%;
+    border-radius: 12px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   }
